--- a/package.json
+++ b/package.json
@@ -25,6 +25,10 @@
     "@types/react": "^18.0.28",
     "@types/react-dom": "^18.0.11",
     "@vitejs/plugin-react": "^4.0.0-beta.0",
+    "autoprefixer": "^10.4.14",
+    "install": "^0.13.0",
+    "npm": "^9.6.5",
+    "postcss": "^8.4.23",
     "tailwindcss": "^3.3.1",
     "vite": "^4.3.0"
   }
